add application to docker compose and improve performance in dockerfile